--- a/Ejercicio-Ado.Net/App.config
+++ b/Ejercicio-Ado.Net/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
+	<appSettings>
+		<add key ="Disco-Image" value="C:\Disco-Image\"/>
+	</appSettings>
 </configuration>
